--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/images/logo/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       O‘zbekiston Respublikasi Oliy taʼlim, fan va innovatsiyalar vazirligi
     </title>
+    
   </head>
   <body>
     <div id="root"></div>
