--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>
       O‘zbekiston Respublikasi Oliy taʼlim, fan va innovatsiyalar vazirligi
     </title>
-    
+    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
   </head>
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
